SceneHierarchy & Object Inspector

--- a/imgui.ini
+++ b/imgui.ini
@@ -7,10 +7,18 @@ Pos=58,140
 Size=389,114
 
 [Window][Screen Statistics]
-Pos=2,3
+Pos=1,2
 Size=334,79
 
 [Window][Engine Settings]
-Pos=1011,2
+Pos=1006,3
 Size=266,149
+
+[Window][Scene Hierarchy]
+Pos=2,82
+Size=333,206
+
+[Window][Object Inspector]
+Pos=984,564
+Size=296,158
 
