Simple Debug Log

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,7 +11,7 @@ Pos=1,2
 Size=334,79
 
 [Window][Engine Settings]
-Pos=1006,3
+Pos=1014,2
 Size=266,149
 
 [Window][Scene Hierarchy]
@@ -21,4 +21,8 @@ Size=333,206
 [Window][Object Inspector]
 Pos=990,537
 Size=290,187
+
+[Window][Debug Log]
+Pos=-1,583
+Size=561,138
 
